[metadata]
name = django-workwhere
version = attr: workwhere.__version__
description = A simple Django app for workplace reservations.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.example.com/
author = Julian Krauth
author_email = mail@j-krauth.de
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 4.1.7
    django-bootstrap-v5 >= 1.0
    Pillow >= 9.5
    workalendar >= 17.0